--- a/prometheus.yml
+++ b/prometheus.yml
@@ -29,3 +29,8 @@ scrape_configs:
       - targets: 
         - "localhost:9090"
         - "10.250.X.X:9100"
+  - job_name: "elasticbeanstalk"
+    metrics_path: "/actuator/prometheus"
+    static_configs:
+      - targets:
+        - "http://hello-eb2-dev.eu-west-1.elasticbeanstalk.com:80"
